ThamKhao/PPL/GiuaKy/5. Nguyên lý ngôn ngữ lập trình - Nguyễn Hứa Phùng (extract.me)/5. Nguyên lý ngôn ngữ lập trình - Nguyễn Hứa Phùng/Tham khảo/BTL/03_Assignment03/assignment3/src/main/mp/parser/.antlr/MPParser.py
# Generated from d:\Google Drive\03_Project\assignment3\src\main\mp\parser\MP.g4 by ANTLR 4.7.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys


class MPParser ( Parser ):

    grammarFileName = "MP.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'+'", "'-'", "'*'", "'/'", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'<>'", "'='", "'<'", "'>'", "'<='", "'>='", "<INVALID>", 
                     "':='", "'['", "']'", "':'", "'('", "')'", "';'", "'..'", 
                     "','" ]

    symbolicNames = [ "<INVALID>", "WITH", "BREAK", "CONTINUE", "FOR", "TO", 
                      "DOWNTO", "DO", "IF", "THEN", "ELSE", "RETURN", "WHILE", 
                      "BEGIN", "END", "FUNCTION", "PROCEDURE", "VAR", "TRUE", 
                      "FALSE", "ARRAY", "OF", "REAL", "BOOLEAN", "INTEGER", 
                      "STRING", "ADD", "SUB", "MUL", "DIVISION", "NOT", 
                      "MOD", "OR", "AND", "NOT_EQUAL", "EQUAL", "LTHAN", 
                      "GTHAN", "LEQUAL", "GEQUAL", "DIV_INT", "ASSIGN", 
                      "LSB", "RSB", "COLON", "LB", "RB", "SEMI", "DDOT", 
                      "COMMA", "COMMENT_1", "COMMENT_2", "COMMENT_3", "WS", 
                      "ID", "INT_LITERAL", "FLOAT_LITERAL", "STRING_LITERAL", 
                      "ILLEGAL_ESCAPE", "UNCLOSE_STRING", "ERROR_CHAR" ]

    RULE_program = 0
    RULE_many_decl = 1
    RULE_decl = 2
    RULE_var_decl = 3
    RULE_many_var_decl = 4
    RULE_one_var_decl = 5
    RULE_func_decl = 6
    RULE_proce_decl = 7
    RULE_param_list = 8
    RULE_many_param = 9
    RULE_param = 10
    RULE_id_list = 11
    RULE_typeIdentifer = 12
    RULE_primitive_type = 13
    RULE_array_type = 14
    RULE_sub_intLit = 15
    RULE_statement_type = 16
    RULE_many_statement_type = 17
    RULE_compound_statem = 18
    RULE_assign_statem = 19
    RULE_lhs = 20
    RULE_if_statem = 21
    RULE_for_statem = 22
    RULE_while_statem = 23
    RULE_return_statem = 24
    RULE_break_statem = 25
    RULE_continue_statem = 26
    RULE_call_statem = 27
    RULE_with_statem = 28
    RULE_exp = 29
    RULE_exp1 = 30
    RULE_exp2 = 31
    RULE_exp3 = 32
    RULE_exp4 = 33
    RULE_exp5 = 34
    RULE_index_exp = 35
    RULE_replace_exp = 36
    RULE_invocation_exp = 37
    RULE_literal = 38
    RULE_int_literal = 39
    RULE_float_literal = 40
    RULE_bool_literal = 41
    RULE_string_literal = 42

    ruleNames =  [ "program", "many_decl", "decl", "var_decl", "many_var_decl", 
                   "one_var_decl", "func_decl", "proce_decl", "param_list", 
                   "many_param", "param", "id_list", "typeIdentifer", "primitive_type", 
                   "array_type", "sub_intLit", "statement_type", "many_statement_type", 
                   "compound_statem", "assign_statem", "lhs", "if_statem", 
                   "for_statem", "while_statem", "return_statem", "break_statem", 
                   "continue_statem", "call_statem", "with_statem", "exp", 
                   "exp1", "exp2", "exp3", "exp4", "exp5", "index_exp", 
                   "replace_exp", "invocation_exp", "literal", "int_literal", 
                   "float_literal", "bool_literal", "string_literal" ]

    EOF = Token.EOF
    WITH=1
    BREAK=2
    CONTINUE=3
    FOR=4
    TO=5
    DOWNTO=6
    DO=7
    IF=8
    THEN=9
    ELSE=10
    RETURN=11
    WHILE=12
    BEGIN=13
    END=14
    FUNCTION=15
    PROCEDURE=16
    VAR=17
    TRUE=18
    FALSE=19
    ARRAY=20
    OF=21
    REAL=22
    BOOLEAN=23
    INTEGER=24
    STRING=25
    ADD=26
    SUB=27
    MUL=28
    DIVISION=29
    NOT=30
    MOD=31
    OR=32
    AND=33
    NOT_EQUAL=34
    EQUAL=35
    LTHAN=36
    GTHAN=37
    LEQUAL=38
    GEQUAL=39
    DIV_INT=40
    ASSIGN=41
    LSB=42
    RSB=43
    COLON=44
    LB=45
    RB=46
    SEMI=47
    DDOT=48
    COMMA=49
    COMMENT_1=50
    COMMENT_2=51
    COMMENT_3=52
    WS=53
    ID=54
    INT_LITERAL=55
    FLOAT_LITERAL=56
    STRING_LITERAL=57
    ILLEGAL_ESCAPE=58
    UNCLOSE_STRING=59
    ERROR_CHAR=60

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def many_decl(self):
            return self.getTypedRuleContext(MPParser.Many_declContext,0)


        def EOF(self):
            return self.getToken(MPParser.EOF, 0)

        def getRuleIndex(self):
            return MPParser.RULE_program




    def program(self):

        localctx = MPParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 86
            self.many_decl()
            self.state = 87
            self.match(MPParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Many_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decl(self):
            return self.getTypedRuleContext(MPParser.DeclContext,0)


        def many_decl(self):
            return self.getTypedRuleContext(MPParser.Many_declContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_many_decl




    def many_decl(self):

        localctx = MPParser.Many_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_many_decl)
        try:
            self.state = 93
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 89
                self.decl()
                self.state = 90
                self.many_decl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 92
                self.decl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_decl(self):
            return self.getTypedRuleContext(MPParser.Var_declContext,0)


        def func_decl(self):
            return self.getTypedRuleContext(MPParser.Func_declContext,0)


        def proce_decl(self):
            return self.getTypedRuleContext(MPParser.Proce_declContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_decl




    def decl(self):

        localctx = MPParser.DeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_decl)
        try:
            self.state = 98
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MPParser.VAR]:
                self.enterOuterAlt(localctx, 1)
                self.state = 95
                self.var_decl()
                pass
            elif token in [MPParser.FUNCTION]:
                self.enterOuterAlt(localctx, 2)
                self.state = 96
                self.func_decl()
                pass
            elif token in [MPParser.PROCEDURE]:
                self.enterOuterAlt(localctx, 3)
                self.state = 97
                self.proce_decl()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Var_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(MPParser.VAR, 0)

        def many_var_decl(self):
            return self.getTypedRuleContext(MPParser.Many_var_declContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_var_decl




    def var_decl(self):

        localctx = MPParser.Var_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_var_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self.match(MPParser.VAR)
            self.state = 101
            self.many_var_decl()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Many_var_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def one_var_decl(self):
            return self.getTypedRuleContext(MPParser.One_var_declContext,0)


        def many_var_decl(self):
            return self.getTypedRuleContext(MPParser.Many_var_declContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_many_var_decl




    def many_var_decl(self):

        localctx = MPParser.Many_var_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_many_var_decl)
        try:
            self.state = 107
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 103
                self.one_var_decl()
                self.state = 104
                self.many_var_decl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 106
                self.one_var_decl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class One_var_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def id_list(self):
            return self.getTypedRuleContext(MPParser.Id_listContext,0)


        def COLON(self):
            return self.getToken(MPParser.COLON, 0)

        def typeIdentifer(self):
            return self.getTypedRuleContext(MPParser.TypeIdentiferContext,0)


        def SEMI(self):
            return self.getToken(MPParser.SEMI, 0)

        def getRuleIndex(self):
            return MPParser.RULE_one_var_decl




    def one_var_decl(self):

        localctx = MPParser.One_var_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_one_var_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            self.id_list()
            self.state = 110
            self.match(MPParser.COLON)
            self.state = 111
            self.typeIdentifer()
            self.state = 112
            self.match(MPParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Func_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCTION(self):
            return self.getToken(MPParser.FUNCTION, 0)

        def ID(self):
            return self.getToken(MPParser.ID, 0)

        def LB(self):
            return self.getToken(MPParser.LB, 0)

        def param_list(self):
            return self.getTypedRuleContext(MPParser.Param_listContext,0)


        def RB(self):
            return self.getToken(MPParser.RB, 0)

        def COLON(self):
            return self.getToken(MPParser.COLON, 0)

        def typeIdentifer(self):
            return self.getTypedRuleContext(MPParser.TypeIdentiferContext,0)


        def SEMI(self):
            return self.getToken(MPParser.SEMI, 0)

        def compound_statem(self):
            return self.getTypedRuleContext(MPParser.Compound_statemContext,0)


        def var_decl(self):
            return self.getTypedRuleContext(MPParser.Var_declContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_func_decl




    def func_decl(self):

        localctx = MPParser.Func_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_func_decl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 114
            self.match(MPParser.FUNCTION)
            self.state = 115
            self.match(MPParser.ID)
            self.state = 116
            self.match(MPParser.LB)
            self.state = 117
            self.param_list()
            self.state = 118
            self.match(MPParser.RB)
            self.state = 119
            self.match(MPParser.COLON)
            self.state = 120
            self.typeIdentifer()
            self.state = 121
            self.match(MPParser.SEMI)
            self.state = 123
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MPParser.VAR:
                self.state = 122
                self.var_decl()


            self.state = 125
            self.compound_statem()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Proce_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PROCEDURE(self):
            return self.getToken(MPParser.PROCEDURE, 0)

        def ID(self):
            return self.getToken(MPParser.ID, 0)

        def LB(self):
            return self.getToken(MPParser.LB, 0)

        def param_list(self):
            return self.getTypedRuleContext(MPParser.Param_listContext,0)


        def RB(self):
            return self.getToken(MPParser.RB, 0)

        def SEMI(self):
            return self.getToken(MPParser.SEMI, 0)

        def compound_statem(self):
            return self.getTypedRuleContext(MPParser.Compound_statemContext,0)


        def var_decl(self):
            return self.getTypedRuleContext(MPParser.Var_declContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_proce_decl




    def proce_decl(self):

        localctx = MPParser.Proce_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_proce_decl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 127
            self.match(MPParser.PROCEDURE)
            self.state = 128
            self.match(MPParser.ID)
            self.state = 129
            self.match(MPParser.LB)
            self.state = 130
            self.param_list()
            self.state = 131
            self.match(MPParser.RB)
            self.state = 132
            self.match(MPParser.SEMI)
            self.state = 134
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MPParser.VAR:
                self.state = 133
                self.var_decl()


            self.state = 136
            self.compound_statem()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Param_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param(self):
            return self.getTypedRuleContext(MPParser.ParamContext,0)


        def many_param(self):
            return self.getTypedRuleContext(MPParser.Many_paramContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_param_list




    def param_list(self):

        localctx = MPParser.Param_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_param_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 141
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MPParser.ID:
                self.state = 138
                self.param()
                self.state = 139
                self.many_param()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Many_paramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SEMI(self):
            return self.getToken(MPParser.SEMI, 0)

        def param(self):
            return self.getTypedRuleContext(MPParser.ParamContext,0)


        def many_param(self):
            return self.getTypedRuleContext(MPParser.Many_paramContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_many_param




    def many_param(self):

        localctx = MPParser.Many_paramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_many_param)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 147
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MPParser.SEMI:
                self.state = 143
                self.match(MPParser.SEMI)
                self.state = 144
                self.param()
                self.state = 145
                self.many_param()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ParamContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def id_list(self):
            return self.getTypedRuleContext(MPParser.Id_listContext,0)


        def COLON(self):
            return self.getToken(MPParser.COLON, 0)

        def typeIdentifer(self):
            return self.getTypedRuleContext(MPParser.TypeIdentiferContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_param




    def param(self):

        localctx = MPParser.ParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_param)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 149
            self.id_list()
            self.state = 150
            self.match(MPParser.COLON)
            self.state = 151
            self.typeIdentifer()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Id_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(MPParser.ID)
            else:
                return self.getToken(MPParser.ID, i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MPParser.COMMA)
            else:
                return self.getToken(MPParser.COMMA, i)

        def getRuleIndex(self):
            return MPParser.RULE_id_list




    def id_list(self):

        localctx = MPParser.Id_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_id_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 153
            self.match(MPParser.ID)
            self.state = 158
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MPParser.COMMA:
                self.state = 154
                self.match(MPParser.COMMA)
                self.state = 155
                self.match(MPParser.ID)
                self.state = 160
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TypeIdentiferContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def primitive_type(self):
            return self.getTypedRuleContext(MPParser.Primitive_typeContext,0)


        def array_type(self):
            return self.getTypedRuleContext(MPParser.Array_typeContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_typeIdentifer




    def typeIdentifer(self):

        localctx = MPParser.TypeIdentiferContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_typeIdentifer)
        try:
            self.state = 163
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MPParser.REAL, MPParser.BOOLEAN, MPParser.INTEGER, MPParser.STRING]:
                self.enterOuterAlt(localctx, 1)
                self.state = 161
                self.primitive_type()
                pass
            elif token in [MPParser.ARRAY]:
                self.enterOuterAlt(localctx, 2)
                self.state = 162
                self.array_type()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Primitive_typeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BOOLEAN(self):
            return self.getToken(MPParser.BOOLEAN, 0)

        def INTEGER(self):
            return self.getToken(MPParser.INTEGER, 0)

        def REAL(self):
            return self.getToken(MPParser.REAL, 0)

        def STRING(self):
            return self.getToken(MPParser.STRING, 0)

        def getRuleIndex(self):
            return MPParser.RULE_primitive_type




    def primitive_type(self):

        localctx = MPParser.Primitive_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_primitive_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 165
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MPParser.REAL) | (1 << MPParser.BOOLEAN) | (1 << MPParser.INTEGER) | (1 << MPParser.STRING))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Array_typeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ARRAY(self):
            return self.getToken(MPParser.ARRAY, 0)

        def LSB(self):
            return self.getToken(MPParser.LSB, 0)

        def sub_intLit(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MPParser.Sub_intLitContext)
            else:
                return self.getTypedRuleContext(MPParser.Sub_intLitContext,i)


        def DDOT(self):
            return self.getToken(MPParser.DDOT, 0)

        def RSB(self):
            return self.getToken(MPParser.RSB, 0)

        def OF(self):
